tests/baselines/reference/thisInModule.errors.txt
thisInModule.ts(1,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
thisInModule.ts(3,5): error TS2331: 'this' cannot be referenced in a module or namespace body.


==== thisInModule.ts (2 errors) ====
    module myMod {
           ~~~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        var x;
        this.x = 5;
        ~~~~
!!! error TS2331: 'this' cannot be referenced in a module or namespace body.
    }